--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "*.ts",
     "*.js"
   ],
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "clean": "rm -Rf node_modules/ dist/",
     "build": "tsc",
     "test": "mocha -r ts-node/register *_test.ts"
   },
@@ -42,7 +41,6 @@
     "chai": "^4.0.2",
     "jasmine": "^2.8.0",
     "mocha": "^3.4.2",
-    "ts-node": "^3.1.0",
     "typescript": "^2.3.4"
   },
   "bugs": {
