--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kubernetes/client-node",
+  "name": "kubernetes-client-packaged",
   "version": "0.1.3",
   "description": "NodeJS client for kubernetes",
   "repository": {
