Include TS declaration entry in package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "*.js"
   ],
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "mocha -r ts-node/register *_test.ts"
