--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "kubernetes-client-packaged",
   "version": "0.1.3",
-  "description": "NodeJS client for kubernetes",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kubernetes-client/javascript.git"
-  },
+  "description": "NodeJS client for kubernetes (forked from https://github.com/kubernetes-client/javascript)",
   "files": [
     "*.ts",
     "*.js"
@@ -19,19 +15,6 @@
   "author": "Kubernetes Authors",
   "license": "Apache-2.0",
   "dependencies": {
-    "base-64": "^0.1.0",
-    "bluebird": "^3.3.5",
-    "byline": "^5.0.0",
-    "chai": "^4.1.0",
-    "js-yaml": "^3.5.2",
-    "jsonpath": "^0.2.11",
-    "mocha": "^3.4.2",
-    "request": "^2.72.0",
-    "shelljs": "^0.7.8 ",
-    "underscore": "^1.8.3",
-    "websocket": "^1.0.25"
-  },
-  "devDependencies": {
     "@types/base-64": "^0.1.2",
     "@types/bluebird": "^3.5.7",
     "@types/chai": "^4.0.1",
@@ -39,17 +22,21 @@
     "@types/mocha": "^2.2.41",
     "@types/node": "^8.0.2",
     "@types/underscore": "^1.8.1",
-    "chai": "^4.0.2",
+    "@types/websocket": "0.0.35",
+    "base-64": "^0.1.0",
+    "bluebird": "^3.3.5",
+    "byline": "^5.0.0",
+    "js-yaml": "^3.5.2",
+    "jsonpath": "^0.2.11",
+    "request": "^2.72.0",
+    "shelljs": "^0.7.8 ",
+    "typescript": "^2.3.4",
+    "underscore": "^1.8.3",
+    "websocket": "^1.0.25"
+  },
+  "devDependencies": {
+    "chai": "^4.1.0",
     "jasmine": "^2.8.0",
-    "mocha": "^3.4.2",
-    "typescript": "^2.3.4"
-  },
-  "bugs": {
-    "url": "https://github.com/kubernetes-client/javascript/issues"
-  },
-  "homepage": "https://github.com/kubernetes-client/javascript#readme",
-  "keywords": [
-    "kubernetes",
-    "client"
-  ]
+    "mocha": "^3.4.2"
+  }
 }
